# gh-tui

./: .gitignore  .gitmodules  Cargo.toml  build.rs
src/: main.rs  pr_files.rs  structs.rs
src/github/: file_with_patch.rs  mod.rs
