[package]
name = "gh-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
syntect = "5.2.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
syntect = "5.0"
